<resources>
    <string name="app_name">CarpoolingTEC</string>
    <string name="tab_text_1">Iniciar Sesión</string>
    <string name="tab_text_2">Registrarme</string>
    <string name="id">ID:</string>
    <string name="iniciarSesionBtn">Iniciar</string>
    <string name="contraseñaTV">Contraseña:</string>
    <string name="nombreCompleto">Nombre Completo:</string>
    <string name="registrarmeBtn">Registrarme</string>
    <string name="telefonoTV">Teléfono:</string>
    <string name="correoInstitucionalTV">Correo Institucional:</string>
    <string name="facebook">Facebook</string>
    <string name="estudianteRBtn">Estudiante</string>
    <string name="funcionarioRBtn">Funcionario</string>
    <string name="terminosYcondiciones">Terminos y Condiciones</string>
    <string name="usoFacebookTV">El uso de la vinculación de Facebook es obligatoria, y está será utilizada para realizar publicaciones.</string>
    <string name="condRegistrarmeTV">Al precionar este boton ( registrarme ) usted acepto los terminos y condiciones</string>
    <string name="title_viajes">Viajes</string>
    <string name="title_amigos">Amigos</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_salir">Salir</string>
    <string name="title_usuario">Usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu_bottom">CarpoolingTEC</string>
    <string name="miViaje">Mi viaje:</string>
    <string name="seleccionarVehiculo">Selecciona un vehículo para el viaje:</string>
    <string name="condiciónViaje">Para aceptar el viaje se debe completar un 70% de la ocupacion total, y tenerse campo establecido en el campus.</string>
    <string name="crearViajeBtn">Crear Viaje</string>
    <string name="instSeleccionarAmigos">Selecciona a un pasajero para tu viaje:</string>
    <string name="buscar">Buscar</string>
    <string name="nombre">Nombre:</string>
    <string name="autos">Vehiculos:</string>
    <string name="guardarPerfil">Guardar Perfil</string>
    <string name="crearCodigo">Crear codigo de pago:</string>
    <string name="crearQR">Crear código</string>
    <string name="montoU">Escriba el monto</string>
    <string name="title_activity_agregar_auto">AgregarAuto</string>
    <string name="miVehiculo">Mi Vehiculo</string>
    <string name="placa">Placa del Vehículo:</string>
    <string name="marcaAuto">Marca:</string>
    <string name="modeloAuto">Modelo:</string>
    <string name="numeroPasajeros">Número de pasajeros:</string>
    <string name="guardarVehiculo">Guardar Vehículo</string>
    <string name="opcionesAdm">Opciones Avanzadas Administrador</string>
    <string name="facebook_app_id">1397985257022480</string>
    <string name="fb_login_protocol_scheme">fb1397985257022480</string>
    <string name="mostrarTabla">Mostrar tabla</string>
    <string name="CantidadPuntos">Cantidad de puntos:</string>
    <string name="ajuste">Ajustes</string>
    <string name="categorias">Categorias</string>
    <string name="correosParaReportes">Correos para reportes</string>
    <string name="nuevoCorreoAdm">Ingresa un nuevo correo aquí</string>
    <string name="nombreCategoria">Nombre de la Categoria:</string>
    <string name="ptsMin">Puntos minimos</string>
    <string name="minViajes">Minimo de viajes:</string>
    <string name="agregarCategoria">Agregar Categoria</string>
    <string name="m">Mostrar Tabla Puntos Por Categoria</string>
    <string name="a">Mostrar tabla lista de viajes</string>
    <string name="df">Puntos Totales:</string>
    <string name="asdf">Deshabilitar</string>
</resources>