<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_viajes"
        android:icon="@drawable/ic_flag_black_24dp"
        android:title="@string/title_viajes" />

    <item
        android:id="@+id/navigation_amigos"
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:title="@string/title_amigos" />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_usuario"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_usuario" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
</menu>
