<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Frag2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nombreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/nombreCompleto"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/nombreET"
                android:layout_width="230dp"
                android:layout_height="37dp"
                android:layout_alignTop="@+id/nombreTV"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/nombreTV"
                android:ems="10"
                android:inputType="textPersonName"
                android:shadowColor="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/idTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombreTV"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/id"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/idETL"
                android:layout_width="230dp"
                android:layout_height="37dp"
                android:layout_alignTop="@+id/idTV"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="125dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/idTV"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/telefonoTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idTV"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/telefonoTV"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/telefonoET"
                android:layout_width="229dp"
                android:layout_height="37dp"
                android:layout_alignTop="@+id/telefonoTV"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="82dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/telefonoTV"
                android:ems="10"
                android:inputType="phone"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/correoInsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/telefonoTV"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/correoInstitucionalTV"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/correoInsETR"
                android:layout_width="229dp"
                android:layout_height="41dp"
                android:layout_alignTop="@+id/correoInsTV"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="14dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/correoInsTV"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/fbBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/correoInsTV"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:includeFontPadding="false"
                android:text="@string/facebook" />

            <TextView
                android:id="@+id/terminosYcondTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fbBtn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/terminosYcondiciones"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="209dp"
                android:layout_height="73dp"
                android:layout_below="@+id/terminosYcondTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/usoFacebookTV"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/condRegistrarmeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/condRegistrarmeTV"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="327dp" />

            <Button
                android:id="@+id/registrarmeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/condRegistrarmeTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/registrarmeBtn"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
    </ScrollView>

</FrameLayout>