<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/nombre"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/nombreUserET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/t1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="225dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/t1"

                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/id"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/idUET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView8"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/telefonoTV"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/telefonoUET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView9"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="phone"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/correoInstitucionalTV"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/correoUET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView10"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/autos"
                android:textColor="@color/colorPrimaryDark" />

            <ImageButton
                android:id="@+id/addCarrosUBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView11"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-5dp"
                android:layout_toEndOf="@+id/textView11"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_add_circle_outline_black_24dp"
                android:tint="#03A9F4" />

            <ListView
                android:id="@+id/CarrosULV"
                android:layout_width="395dp"
                android:layout_height="100dp"
                android:layout_below="@+id/textView11"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/guardarPerfilBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CarrosULV"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/guardarPerfil" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/guardarPerfilBtn"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/crearCodigo"
                android:textColor="@color/colorPrimaryDark" />


            <EditText
                android:id="@+id/montoUET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView12"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/montoU"
                android:inputType="number"
                android:textSize="14sp" />

            <Button
                android:id="@+id/qrCodeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/montoUET"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/crearQR" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qrCodeBtn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@color/colorPrimary" />

            <Button
                android:id="@+id/opcionesAdmBtn"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="181dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:text="@string/opcionesAdm" />

        </RelativeLayout>
    </ScrollView>

</FrameLayout>