<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AgregarAuto"
    tools:showIn="@layout/activity_agregar_auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/miVehiculo" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView13"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/placa" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView14"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/marcaAuto" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView15"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/modeloAuto" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView16"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/numeroPasajeros" />

            <Button
                android:id="@+id/guardarAutoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView17"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="30dp"
                android:text="@string/guardarVehiculo" />

            <EditText
                android:id="@+id/placaET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView14"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/marcaET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView15"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/ModeloET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView16"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/numeroPasajerosET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView17"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />
        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>